objects/dfsle__EOS_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A DFS-CLM specific custom setting to store the templates for object mappings between DFS-CLM and
		SpringCM.</description>
    <fields>
        <fullName>dfsle__DoNotConvertSpecialCharacters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting to block converting special symbols to underscore in clm folder path</description>
        <label>DoNotConvertSpecialCharacters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__FolderNameFormat__c</fullName>
        <description>A field to store the format of the folder name that maps a Salesforce object to a folder in SpringCM.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field to store the format of the folder name that maps a Salesforce object to a folder in
		SpringCM.</inlineHelpText>
        <label>Folder Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__FolderName__c</fullName>
        <description>A field to store the folder name generated during the object mapping process.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field to store the folder name generated during the object mapping process.</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__IsLegacyFileIt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Previously a Legacy FileIt Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__PathFormat__c</fullName>
        <description>A field to store the path format of the folder name that maps a Salesforce object to a folder in
		SpringCM.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field to store the path format of the folder name that maps a Salesforce object to a folder in
		SpringCM.</inlineHelpText>
        <label>Path Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Path__c</fullName>
        <description>A field to store the folder path in SpringCM, generated during the object mapping process within
		Salesforce.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field to store the folder path in SpringCM, generated during the object mapping process within
		Salesforce.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Variables__c</fullName>
        <description>A field to store the variable folder names.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field to store the variable folder names.</inlineHelpText>
        <label>Variables</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EOS Type</label>
</CustomObject>